# hls_erg1

./: .gitignore  .gitmodules  .tlc  CMakeLists.txt  build.sh  erg1  feature_matrix.txt  ff.txt  test.py  weights.txt
src/: main.cpp  main_cosimulation.cpp  read_txt.h  top.h
